Change index page and add gallery page

--- a/templates/index.html
+++ b/templates/index.html
@@ -93,6 +93,9 @@ and I won't let anyone take you away from me.
 								Milo
 							</h3>
 							<p>
+								Well Well Well! Who do we have here?
+							</p>
+							<p>
 								<a class="btn btn-primary" href="/gallery">Gallery</a>
 							</p>
 						</div>
@@ -131,7 +134,7 @@ and I won't let anyone take you away from me.
 			<img alt="Bootstrap Image Preview" src="https://lh3.googleusercontent.com/H2sPKy_O2RUb6XG-HH_PXis_ZAF7bj4gi7SqQaPab_g=w371-h659-no" class="img-thumbnail" />
 		</div>
 	</div>
-	<div class="row">
+	<div class="row" style="padding-top: 10px">
 		<div class="col-md-12">
 			<div class="carousel slide" id="carousel-839617">
 				<ol class="carousel-indicators">
@@ -168,10 +171,6 @@ and I won't let anyone take you away from me.
 
 		</div>
 		<div class="col-md-4">
-
-			<address>
-				 <strong>Twitter, Inc.</strong><br /> 795 Folsom Ave, Suite 600<br /> San Francisco, CA 94107<br /> <abbr title="Phone">P:</abbr> (123) 456-7890
-			</address>
 		</div>
 	</div>
 </div>
