Remove javascript file, change {{block body}} variable to {{block content}}

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {%block title %} You and me! Together{% endblock %}
 
-{%block body %}
+{%block content %}
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
@@ -137,7 +137,7 @@ and I won't let anyone take you away from me.
 	<div class="row" style="padding-top: 10px">
 		<div class="col-md-12">
 			<div class="carousel slide" id="carousel-839617">
-				<ol class="carousel-indicators">
+				<o	l class="carousel-indicators">
 					<li class="active" data-slide-to="0" data-target="#carousel-839617">
 					</li>
 					<li data-slide-to="1" data-target="#carousel-839617">
@@ -174,7 +174,4 @@ and I won't let anyone take you away from me.
 		</div>
 	</div>
 </div>
-    <script src="{{url_for('static', filename='js/jquery.min.js')}}"></script>
-    <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
-    <script src="{{url_for('static', filename='js/scripts.js')}}"></script>
 {% endblock %}
